<resources>
    <string name="app_name">My Math Class</string>
    <string name="quizType1">Adding and Subtracting</string>
    <string name="quizType2">Multiplication</string>
    <string name="quizType3">Add/Subtract Fractions</string>
    <string name="quizType4">Multiply/Divide Fractions</string>
    <string name="quizType5">Adding and Subtracting with Algebra</string>
    <string name="quizType6">Multiplication with Algebra</string>
    <string name="quizType7">Fractions with Algebra</string>
    <string name="homeTitleTxt">My Math Class</string>
    <string name="homeStartBtn">New Quiz</string>
    <string name="quizCreationArithmeticBtn">Basic Arithmetic</string>
    <string name="quizCreationTitleTxt">Select Quiz Type</string>
    <string name="difficultySelectEasyBtn">Easy</string>
    <string name="difficultySelectMediumBtn">Medium</string>
    <string name="difficultySelectHardBtn">Hard</string>
    <string name="difficultySelectExtremeBtn">Extreme</string>
    <string name="unsetTitleTxt">UNSET</string>
    <string name="quizQuestionsDeleteBtn">Delete</string>
    <string name="quizQuestionsEnterBtn">Enter</string>
    <string name="quizOverNewQuizBtn">New Quiz</string>
    <string name="quizOverViewIncorrectBtn">View Incorrect Questions</string>
    <string name="quizOverScoreTxt">Score:</string>
    <string name="quizOverTitleTxt">Quiz Complete</string>
    <string name="incorrectQuestionsTitleTxt">Incorrect Questions</string>
    <string name="incorrectQuestionsQuestionTxt">Question</string>
    <string name="incorrectQuestionsUserAnswerTxt">Your Answer</string>
    <string name="incorrectQuestionsCorrectAnswerTxt">Correct Answer</string>
    <string name="incorrectQuestionsNextBtn">Next Question</string>
    <string name="homeSettingsBtn">Settings</string>
    <string name="settingsTitleTxt">Settings</string>
    <string name="settingsBackgroundColorTxt">BackgroundColor</string>
    <string name="title_activity_quiz_settings">QuizSettings</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_settings">Settings</string>
    <string name="quizSettingsTitleTxt">Settings</string>
    <string name="quizSettingsHomeBtn">Home</string>
    <string name="quizSettingsNumQuestionsTxt">Questions per Quiz</string>
    <string name="quizQuestionsClearBtnTxt">Clear</string>
    <string name="difficultySelectTitleText">Select Difficulty</string>
    <string name="tutorialText1">Put all answers in lowest terms, using fractions</string>
    <string name="tutorialText2">Use the keypad to enter your answer</string>
    <string name="tutorialText3">Use this button to write a division symbol</string>
    <string name="tutorialText4">Use this button to write a negative symbol</string>
    <string name="tutorialText5">Use this button to check your answer</string>
    <string name="IncorrectViewerNextBtnText1">Next Question</string>
    <string name="IncorrectViewerNextBtnText2">Return to Score Screen</string>
    <string name="quizQuestionsTutorialNextBtn">Next</string>
    <string name="quizSettingsColor1TitleTxt">Color 1</string>
    <string name="quizSettingsColor2TitleTxt">Color 2</string>
</resources>
