<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.brunsting.jacob.mobilemathclass.DifficultySelect"
    android:background="@color/backgroundColor"
    android:id="@+id/difficultySelectLayout">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/difficultySelectTitleText"
        android:id="@+id/difficultySelectTitleTxt"
        android:textSize="@dimen/titleTextSize"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:gravity="center_horizontal"
        android:textColor="@color/titleTextColor"
        android:layout_marginBottom="10dp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/difficultySelectTitleTxt">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/difficultySelectEasyBtn"
            android:id="@+id/difficultySelectEasyBtn"
            android:textColor="@color/textColor1"
            android:background="@color/buttonColor1"
            android:layout_margin="@dimen/buttonMargin"
            android:layout_weight="1"
            android:textSize="@dimen/btnTextSize" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/difficultySelectMediumBtn"
            android:id="@+id/difficultySelectMediumBtn"
            android:textColor="@color/textColor1"
            android:background="@color/buttonColor1"
            android:layout_margin="@dimen/buttonMargin"
            android:layout_weight="1"
            android:textSize="@dimen/btnTextSize" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/difficultySelectHardBtn"
            android:id="@+id/difficultySelectHardBtn"
            android:textColor="@color/textColor1"
            android:background="@color/buttonColor1"
            android:layout_margin="@dimen/buttonMargin"
            android:layout_weight="1"
            android:textSize="@dimen/btnTextSize" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/difficultySelectExtremeBtn"
            android:id="@+id/difficultySelectExtremeBtn"
            android:textColor="@color/textColor1"
            android:background="@color/buttonColor1"
            android:layout_margin="@dimen/buttonMargin"
            android:layout_weight="1"
            android:textSize="@dimen/btnTextSize" />
    </LinearLayout>

</RelativeLayout>
