<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.brunsting.jacob.mobilemathclass.QuizCreation"
    android:background="@color/backgroundColor"
    android:id="@+id/questionCreationLayout">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/quizCreationTitleTxt"
        android:id="@+id/quizCreationTitleTxt"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="@dimen/titleTextSize"
        android:textColor="@color/titleTextColor"
        android:gravity="center_horizontal"
        android:layout_marginBottom="10dp" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/scrollView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/quizCreationTitleTxt">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/quizType1"
                android:id="@+id/quizCreationType1Btn"
                android:height="130dp"
                android:textColor="@color/textColor1"
                android:background="@color/buttonColor1"
                android:textSize="@dimen/btnTextSize"
                android:layout_margin="@dimen/buttonMargin"
                android:paddingLeft="@dimen/buttonTextHorozontalPadding"
                android:paddingRight="@dimen/buttonTextHorozontalPadding" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/quizType2"
                android:id="@+id/quizCreationType2Btn"
                android:height="130dp"
                android:textColor="@color/textColor1"
                android:background="@color/buttonColor1"
                android:textSize="@dimen/btnTextSize"
                android:layout_margin="@dimen/buttonMargin"
                android:paddingLeft="@dimen/buttonTextHorozontalPadding"
                android:paddingRight="@dimen/buttonTextHorozontalPadding" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/quizType3"
                android:id="@+id/quizCreationType3Btn"
                android:height="130dp"
                android:textColor="@color/textColor1"
                android:background="@color/buttonColor1"
                android:textSize="@dimen/btnTextSize"
                android:layout_margin="@dimen/buttonMargin"
                android:paddingLeft="@dimen/buttonTextHorozontalPadding"
                android:paddingRight="@dimen/buttonTextHorozontalPadding" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/quizType4"
                android:id="@+id/quizCreationType4Btn"
                android:height="130dp"
                android:textColor="@color/textColor1"
                android:background="@color/buttonColor1"
                android:textSize="@dimen/btnTextSize"
                android:layout_margin="@dimen/buttonMargin"
                android:paddingLeft="@dimen/buttonTextHorozontalPadding"
                android:paddingRight="@dimen/buttonTextHorozontalPadding" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/quizType5"
                android:id="@+id/quizCreationType5Btn"
                android:height="130dp"
                android:textColor="@color/textColor1"
                android:background="@color/buttonColor1"
                android:textSize="@dimen/btnTextSize"
                android:layout_margin="@dimen/buttonMargin"
                android:paddingLeft="@dimen/buttonTextHorozontalPadding"
                android:paddingRight="@dimen/buttonTextHorozontalPadding" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/quizType6"
                android:id="@+id/quizCreationType6Btn"
                android:height="130dp"
                android:textColor="@color/textColor1"
                android:background="@color/buttonColor1"
                android:textSize="@dimen/btnTextSize"
                android:layout_margin="@dimen/buttonMargin"
                android:paddingLeft="@dimen/buttonTextHorozontalPadding"
                android:paddingRight="@dimen/buttonTextHorozontalPadding" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/quizType7"
                android:id="@+id/quizCreationType7Btn"
                android:height="130dp"
                android:textColor="@color/textColor1"
                android:background="@color/buttonColor1"
                android:textSize="@dimen/btnTextSize"
                android:layout_margin="@dimen/buttonMargin"
                android:paddingLeft="@dimen/buttonTextHorozontalPadding"
                android:paddingRight="@dimen/buttonTextHorozontalPadding" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
