<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.brunsting.jacob.mobilemathclass.QuizOver"
    android:background="@color/backgroundColor"
    android:id="@+id/quizOverLayout">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quizOverTitleTxt"
        android:id="@+id/quizOverTitleTxt"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textSize="@dimen/titleTextSize"
        android:gravity="center"
        android:textColor="@color/titleTextColor"
        android:autoText="true"
        android:layout_marginBottom="10dp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/unsetTitleTxt"
        android:id="@+id/quizOverScoreTxt"
        android:gravity="center"
        android:textIsSelectable="true"
        android:textSize="@dimen/largestTitleTextSize"
        android:textColor="@color/titleTextColor"
        android:layout_below="@+id/quizOverTitleTxt"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="10dp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/quizOverScoreTxt">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="@dimen/hugeButtonHeight"
            android:text="@string/quizOverViewIncorrectBtn"
            android:id="@+id/quizOverIncQuestionsBtn"
            android:textColor="@color/textColor1"
            android:background="@color/buttonColor1"
            android:textSize="@dimen/btnTextSize"
            android:layout_margin="@dimen/buttonMargin"
            android:layout_weight="1" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="@dimen/hugeButtonHeight"
            android:text="@string/quizOverNewQuizBtn"
            android:id="@+id/quizOverNewQuizBtn"
            android:textColor="@color/textColor1"
            android:background="@color/buttonColor1"
            android:textSize="@dimen/btnTextSize"
            android:layout_margin="@dimen/buttonMargin"
            android:layout_weight="1" />
    </LinearLayout>

</RelativeLayout>
