<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.brunsting.jacob.mobilemathclass.Home"
    android:background="@color/backgroundColor"
    android:id="@+id/homeLayout">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/homeTitleTxt"
        android:id="@+id/homeTitleTxt"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textAlignment="center"
        android:textSize="@dimen/largestTitleTextSize"
        android:textColor="@color/titleTextColor"
        android:layout_marginBottom="10dp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/homeTitleTxt">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/homeStartBtn"
            android:id="@+id/homeMainBtn"
            android:textSize="@dimen/largeBtnTextSize"
            android:textColor="@color/textColor1"
            android:background="@color/buttonColor1"
            android:foreground="#00000000"
            android:layout_weight="0.25"
            android:layout_margin="@dimen/buttonMargin" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/homeSettingsBtn"
            android:id="@+id/homeSettingsBtn"
            android:textSize="@dimen/largeBtnTextSize"
            android:textColor="@color/textColor1"
            android:background="@color/buttonColor1"
            android:foreground="#00000000"
            android:layout_weight="0.75"
            android:layout_margin="@dimen/buttonMargin"
            android:height="@dimen/hugeButtonHeight" />
    </LinearLayout>

</RelativeLayout>
